Manually cleanup as many warnings as possible